--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Brennan's Projects</title>
 		<meta charset="utf-8">
 		<meta name="author" content="Brennan Kramling">
 		<meta name="description" content="A showcase of projects both
 		in progress and completed by Brennan Kramling.">
+		<link rel="stylesheet" href="main-style.css">;
 	</head>
 	<body>
-		
+		<div class="navbar">
+			<a class="active" href="#home">Home</a>
+			<a href="#aboutme">About Me</a>
+			<a href="#projects">My Projects</a>
+		</div>
 	</body>
 </html>
