--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Brennan's Projects</title>
+		<title>Brennan's Site</title>
 		<meta charset="utf-8">
 		<meta name="author" content="Brennan Kramling">
-		<meta name="description" content="A showcase of projects both
-		in progress and completed by Brennan Kramling.">
-		<link rel="stylesheet" href="main-style.css">;
+		<meta name="description" content="The home page of my website">
+		<link rel="stylesheet" href="styles/main-style.css">
+		<style>
+			.banner {
+				background-color: #2c3b41;
+				padding-top: 15px;
+				padding-bottom: 10px;
+			}
+
+			#bannerImg {
+				width: 50%;
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		</style>
 	</head>
 	<body>
+		<div class="banner">
+			<img id="bannerImg" src="res/mountain_banner.jpg" alt="An aesthetic mountain">
+		</div>
 		<div class="navbar">
-			<a class="active" href="#home">Home</a>
-			<a href="#aboutme">About Me</a>
-			<a href="#projects">My Projects</a>
+			<a class="active" href="index.html">Home</a>
+			<a href="aboutme.html">About Me</a>
+			<a href="projects.html">My Projects</a>
 		</div>
 	</body>
 </html>
