--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,28 @@
 		<meta name="author" content="Brennan Kramling">
 		<meta name="description" content="The About Me section of my website">
 		<link rel="stylesheet" href="styles/main-style.css">;
+        <script src="scripts/jquery-3.5.1.min.js"></script>
+        <script src="scripts/aboutme-script.js"></script>
+        <style>
+            .banner {
+                background-color: #1f292e;
+				padding-top: 15px;
+				padding-bottom: 10px;
+                text-align: center;
+			}
+
+            .arrow {
+                margin: 0px 5%;
+                margin-bottom: 10%;
+            }
+        </style>
 	</head>
 	<body>
+        <div class="banner">
+            <img style="display:none" src="res/aboutme/arrow_left.png" class="arrow">
+            <img style="display:inline-block" src="res/aboutme/bren_suit.jpg" id="bannerImg" width="18%">
+            <img style="display:none" src="res/aboutme/arrow_right.png" class="arrow">
+        </div>
 		<div class="navbar">
 			<a href="index.html">Home</a>
 			<a class="active" href="aboutme.html">About Me</a>
