--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="styles/main-style.css">
 		<style>
 			.banner {
-				background-color: #2c3b41;
+				background-color: #1f292e;
 				padding-top: 15px;
 				padding-bottom: 10px;
 			}
